--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remix": "^2.16.5",
     "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
